--- a/mopidy/build.yaml
+++ b/mopidy/build.yaml
@@ -1,6 +1,6 @@
 ---
 build_from:
-  amd64: docker.io/thibaudmathieu/mopidy-hassio:latest
+  amd64: docker.io/thibaudmathieu/mopidy-hassio:new
 labels:
   org.opencontainers.image.title: "Home Assistant Add-on: Mopidy"
   org.opencontainers.image.description: "Media player Mopidy"
