--- a/mopidy/Dockerfile
+++ b/mopidy/Dockerfile
@@ -1,4 +1,4 @@
-ARG BUILD_FROM=docker.io/thibaudmathieu/mopidy-hassio:latest
+ARG BUILD_FROM=docker.io/thibaudmathieu/mopidy-hassio:1
 # hadolint ignore=DL3006
 FROM ${BUILD_FROM}
 
