--- a/mopidy/config.yaml
+++ b/mopidy/config.yaml
@@ -1,6 +1,6 @@
 ---
 name: Mopidy
-version: dev
+version: 1.0.0
 slug: mopidy
 panel_icon: mdi:music-circle
 description: Mopidy is an extensible music server
