--- a/mopidy/Dockerfile.build
+++ b/mopidy/Dockerfile.build
@@ -45,6 +45,7 @@ RUN \
         mopidy-podcast=3.0.1-1 \
         mopidy-soundcloud=3.0.1-1 \
         mopidy-tunein=1.1.0-1
+RUN apt-get install -y --no-install-recommends libpq-dev python-dev libxml2-dev libxslt1-dev libldap2-dev libsasl2-dev libffi-dev libjpeg-dev zlib1g-dev gcc
 RUN curl https://bootstrap.pypa.io/get-pip.py | python3 
 RUN pip install --no-cache-dir cffi
 RUN pip3 install --no-cache-dir -r /tmp/requirements.txt \
